--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <section class="main-articles">
       <h1 class="about-me">O mnie:</h1>
-      <p class="kkk">
+      <p class="description">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, cumque
         alias sapiente ipsam doloribus consequatur illum explicabo, suscipit
         veniam ab eveniet? Tempore adipisci, sint optio distinctio nihil quia
