--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <li class="menu_item"><a href="" class="menu_link">Home</a></li>
           <li class="menu_item"><a href="" class="menu_link">O mnie</a></li>
           <li class="menu_item"><a href="" class="menu_link">Edukacja</a></li>
+          <li class="menu_item"><a href="" class="menu_link">Znajomość</a></li>
           <li class="menu_item"><a href="" class="menu_link">Kontakt</a></li>
         </ul>
         <hr />
