--- a/index.html
+++ b/index.html
@@ -27,16 +27,39 @@
         <h1 class="person_name">Konrad Pietkiewicz</h1>
       </div>
     </header>
-    <section class="main-articles">
-      <h1 class="about-me">O mnie:</h1>
-      <p class="description">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, cumque
-        alias sapiente ipsam doloribus consequatur illum explicabo, suscipit
-        veniam ab eveniet? Tempore adipisci, sint optio distinctio nihil quia
-        blanditiis veniam. Ullam rem excepturi ex suscipit. Sapiente consequatur
-        perferendis nisi ab sunt eos doloremque fuga officiis!
-      </p>
-    </section>
+    <div class="main">
+      <section class="main-articles">
+        <h1 class="about-me">O mnie:</h1>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, cumque
+          alias sapiente ipsam doloribus consequatur illum explicabo, suscipit
+          veniam ab eveniet? Tempore adipisci, sint optio distinctio nihil quia
+          blanditiis veniam. Ullam rem excepturi ex suscipit. Sapiente
+          consequatur perferendis nisi ab sunt eos doloremque fuga officiis!
+        </p>
+      </section>
+      <section class="education">
+        <h1 class="education_intro">Edukacja</h1>
+        <article class="article">
+          <img src="assets/school.png" alt="" class="article_image" />
+          <div class="text">
+            <h3 class="article_name-school">Wyższa Szkoła Bankowa w Gdyni</h3>
+            <p class="article_year">Paz 2017 - obecnie</p>
+            <p class="article_info">Studia Inżynierskie Informatyka</p>
+          </div>
+        </article>
+        <article class="article">
+          <img src="assets/school.png" alt="" class="article_image" />
+          <div class="text">
+            <h3 class="article_name-school">
+              Zespół Szkół Gospodarki Żywnościowej i Agrobiznesu w Lęborku
+            </h3>
+            <p class="article_year">Wrz 2011 - Kwi 2015</p>
+            <p class="article_info">Profil Technik Informatyk</p>
+          </div>
+        </article>
+      </section>
+    </div>
     <footer id="footer">Konrad Pietkiewicz</footer>
     <script src="main.js"></script>
   </body>
