Add class skill

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           <li class="menu_item"><a href="" class="menu_link">Home</a></li>
           <li class="menu_item"><a href="" class="menu_link">O mnie</a></li>
           <li class="menu_item"><a href="" class="menu_link">Edukacja</a></li>
-          <li class="menu_item"><a href="" class="menu_link">Znajomość</a></li>
+          <li class="menu_item">
+            <a href="" class="menu_link">Umiejętności</a>
+          </li>
           <li class="menu_item"><a href="" class="menu_link">Kontakt</a></li>
         </ul>
         <hr />
@@ -58,6 +60,21 @@
             <p class="article_info">Profil Technik Informatyk</p>
           </div>
         </article>
+      </section>
+      <section class="skill">
+        <h1 class="skill_intro">Umiejętności</h1>
+        <div class="technologies">
+          <img src="assets/html5.png" alt="" class="technologies_image" />
+          <p class="technologies_info">HTML5</p>
+        </div>
+        <div class="technologies">
+          <img src="assets/css-3.png" alt="" class="technologies_image" />
+          <p class="technologies_info">CSS3</p>
+        </div>
+        <div class="technologies">
+          <img src="assets/js.png" alt="" class="technologies_image" />
+          <p class="technologies_info">JavaScript</p>
+        </div>
       </section>
     </div>
     <footer id="footer">Konrad Pietkiewicz</footer>
