--- a/index.html
+++ b/index.html
@@ -63,17 +63,39 @@
       </section>
       <section class="skill">
         <h1 class="skill_intro">Umiejętności</h1>
-        <div class="technologies">
-          <img src="assets/html5.png" alt="" class="technologies_image" />
-          <p class="technologies_info">HTML5</p>
-        </div>
-        <div class="technologies">
-          <img src="assets/css-3.png" alt="" class="technologies_image" />
-          <p class="technologies_info">CSS3</p>
-        </div>
-        <div class="technologies">
-          <img src="assets/js.png" alt="" class="technologies_image" />
-          <p class="technologies_info">JavaScript</p>
+        <div class="it">
+          <div class="technologies">
+            <img src="assets/html5.png" alt="" class="technologies_image" />
+            <p class="technologies_info">HTML5</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/css-3.png" alt="" class="technologies_image" />
+            <p class="technologies_info">CSS3</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/js.png" alt="" class="technologies_image" />
+            <p class="technologies_info">JavaScript</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/react.png" alt="" class="technologies_image" />
+            <p class="technologies_info">React</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/sass.png" alt="" class="technologies_image" />
+            <p class="technologies_info">Sass</p>
+          </div>
+          <div class="technologies">
+            <img
+              src="assets/adaptative.png"
+              alt=""
+              class="technologies_image"
+            />
+            <p class="technologies_info">RWD</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/git.png" alt="" class="technologies_image" />
+            <p class="technologies_info">Git</p>
+          </div>
         </div>
       </section>
     </div>
