--- a/index.html
+++ b/index.html
@@ -8,98 +8,107 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <nav class="menu">
-        <ul class="menu_list">
-          <li class="menu_item">
-            <a href="" class="menu_link">KonradPietkiewicz.PL</a>
-          </li>
-          <li class="menu_item"><a href="" class="menu_link">Home</a></li>
-          <li class="menu_item"><a href="" class="menu_link">O mnie</a></li>
-          <li class="menu_item"><a href="" class="menu_link">Edukacja</a></li>
-          <li class="menu_item">
-            <a href="" class="menu_link">Umiejętności</a>
-          </li>
-          <li class="menu_item"><a href="" class="menu_link">Kontakt</a></li>
-        </ul>
-        <hr />
-      </nav>
-      <div class="person">
-        <img class="person_photo" src="assets/me.png" alt="" />
-        <h1 class="person_name">Konrad Pietkiewicz</h1>
-      </div>
-    </header>
-    <div class="main">
-      <section class="main-articles">
-        <h1 class="about-me">O mnie:</h1>
-        <p class="description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, cumque
-          alias sapiente ipsam doloribus consequatur illum explicabo, suscipit
-          veniam ab eveniet? Tempore adipisci, sint optio distinctio nihil quia
-          blanditiis veniam. Ullam rem excepturi ex suscipit. Sapiente
-          consequatur perferendis nisi ab sunt eos doloremque fuga officiis!
-        </p>
-      </section>
-      <section class="education">
-        <h1 class="education_intro">Edukacja</h1>
-        <article class="article">
-          <img src="assets/school.png" alt="" class="article_image" />
-          <div class="text">
-            <h3 class="article_name-school">Wyższa Szkoła Bankowa w Gdyni</h3>
-            <p class="article_year">Paz 2017 - obecnie</p>
-            <p class="article_info">Studia Inżynierskie Informatyka</p>
-          </div>
-        </article>
-        <article class="article">
-          <img src="assets/school.png" alt="" class="article_image" />
-          <div class="text">
-            <h3 class="article_name-school">
-              Zespół Szkół Gospodarki Żywnościowej i Agrobiznesu w Lęborku
-            </h3>
-            <p class="article_year">Wrz 2011 - Kwi 2015</p>
-            <p class="article_info">Profil Technik Informatyk</p>
-          </div>
-        </article>
-      </section>
-      <section class="skill">
-        <h1 class="skill_intro">Umiejętności</h1>
-        <div class="it">
-          <div class="technologies">
-            <img src="assets/html5.png" alt="" class="technologies_image" />
-            <p class="technologies_info">HTML5</p>
-          </div>
-          <div class="technologies">
-            <img src="assets/css-3.png" alt="" class="technologies_image" />
-            <p class="technologies_info">CSS3</p>
-          </div>
-          <div class="technologies">
-            <img src="assets/js.png" alt="" class="technologies_image" />
-            <p class="technologies_info">JavaScript</p>
-          </div>
-          <div class="technologies">
-            <img src="assets/react.png" alt="" class="technologies_image" />
-            <p class="technologies_info">React</p>
-          </div>
-          <div class="technologies">
-            <img src="assets/sass.png" alt="" class="technologies_image" />
-            <p class="technologies_info">Sass</p>
-          </div>
-          <div class="technologies">
-            <img
-              src="assets/adaptative.png"
-              alt=""
-              class="technologies_image"
-            />
-            <p class="technologies_info">RWD</p>
-          </div>
-          <div class="technologies">
-            <img src="assets/git.png" alt="" class="technologies_image" />
-            <p class="technologies_info">Git</p>
-          </div>
+    <div class="wrapper">
+      <header>
+        <nav class="menu">
+          <ul class="menu_list">
+            <li class="menu_item">
+              <a href="" class="menu_link">KonradPietkiewicz.PL</a>
+            </li>
+            <li class="menu_item"><a href="" class="menu_link">Home</a></li>
+            <li class="menu_item"><a href="" class="menu_link">O mnie</a></li>
+            <li class="menu_item"><a href="" class="menu_link">Edukacja</a></li>
+            <li class="menu_item">
+              <a href="" class="menu_link">Umiejętności</a>
+            </li>
+            <li class="menu_item"><a href="" class="menu_link">Kontakt</a></li>
+          </ul>
+          <hr />
+        </nav>
+        <div class="person">
+          <img class="person_photo" src="assets/me.png" alt="" />
+          <h1 class="person_name">Konrad Pietkiewicz</h1>
         </div>
-      </section>
+      </header>
+      <div class="main">
+        <section class="main-articles">
+          <h1 class="about-me">O mnie:</h1>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+            cumque alias sapiente ipsam doloribus consequatur illum explicabo,
+            suscipit veniam ab eveniet? Tempore adipisci, sint optio distinctio
+            nihil quia blanditiis veniam. Ullam rem excepturi ex suscipit.
+            Sapiente consequatur perferendis nisi ab sunt eos doloremque fuga
+            officiis!
+          </p>
+        </section>
+        <section class="education">
+          <h1 class="education_intro">Edukacja</h1>
+          <article class="article">
+            <img src="assets/school.png" alt="" class="article_image" />
+            <div class="text">
+              <h3 class="article_name-school">Wyższa Szkoła Bankowa w Gdyni</h3>
+              <p class="article_year">Paz 2017 - obecnie</p>
+              <p class="article_info">Studia Inżynierskie Informatyka</p>
+            </div>
+          </article>
+          <article class="article">
+            <img src="assets/school.png" alt="" class="article_image" />
+            <div class="text">
+              <h3 class="article_name-school">
+                Zespół Szkół Gospodarki Żywnościowej i Agrobiznesu w Lęborku
+              </h3>
+              <p class="article_year">Wrz 2011 - Kwi 2015</p>
+              <p class="article_info">Profil Technik Informatyk</p>
+            </div>
+          </article>
+        </section>
+        <section class="skill">
+          <h1 class="skill_intro">Umiejętności</h1>
+          <div class="it">
+            <div class="technologies">
+              <img src="assets/html5.png" alt="" class="technologies_image" />
+              <p class="technologies_info">HTML5</p>
+            </div>
+            <div class="technologies">
+              <img src="assets/css-3.png" alt="" class="technologies_image" />
+              <p class="technologies_info">CSS3</p>
+            </div>
+            <div class="technologies">
+              <img src="assets/js.png" alt="" class="technologies_image" />
+              <p class="technologies_info">JavaScript</p>
+            </div>
+            <div class="technologies">
+              <img src="assets/react.png" alt="" class="technologies_image" />
+              <p class="technologies_info">React</p>
+            </div>
+            <div class="technologies">
+              <img src="assets/sass.png" alt="" class="technologies_image" />
+              <p class="technologies_info">Sass</p>
+            </div>
+            <div class="technologies">
+              <img
+                src="assets/adaptative.png"
+                alt=""
+                class="technologies_image"
+              />
+              <p class="technologies_info">RWD</p>
+            </div>
+            <div class="technologies">
+              <img src="assets/git.png" alt="" class="technologies_image" />
+              <p class="technologies_info">Git</p>
+            </div>
+          </div>
+        </section>
+      </div>
+      <footer class="footer">
+        <div class="protection">
+          <div id="protection_copy"></div>
+          <p class="protection_name">Konrad Pietkiewicz</p>
+        </div>
+        <div class="link"></div>
+      </footer>
     </div>
-    <footer id="footer">Konrad Pietkiewicz</footer>
     <script src="main.js"></script>
   </body>
 </html>
