--- a/index.html
+++ b/index.html
@@ -109,6 +109,6 @@
         <div class="link"></div>
       </footer>
     </div>
-    <script src="main.js"></script>
+    <script src="footer.js"></script>
   </body>
 </html>
