--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Konrad Pietkiewicz</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -101,13 +105,24 @@
           </div>
         </section>
       </div>
-      <footer class="footer">
+      <div class="footer">
         <div class="protection">
           <div id="protection_copy"></div>
           <p class="protection_name">Konrad Pietkiewicz</p>
         </div>
-        <div class="link"></div>
-      </footer>
+        <div class="link">
+        <a
+          class="link_icon"
+          href="https://www.facebook.com/konrad.pietkiewicz.7"
+          ><i class="fa fa-facebook-official" aria-hidden="true"></i
+        ></a>
+        <a class="link_icon" href="mailto: konradpietkiewicz20@gmail.com"
+          ><i class="fa fa-envelope" aria-hidden="true"></i
+        ></a>
+        <a class="link_icon" href="https://github.com/KonradPietkiewicz"
+          ><i class="fa fa-github-square" aria-hidden="true"></i
+        ></a>
+      </div>
     </div>
     <script src="footer.js"></script>
   </body>
