--- a/index.html
+++ b/index.html
@@ -31,19 +31,16 @@
         </nav>
         <div class="person">
           <img class="person_photo" src="assets/me.png" alt="" />
-          <h1 class="person_name">Konrad Pietkiewicz</h1>
+          <h1 class="person_name"></h1>
         </div>
         </header>
       <div class="main">
         <section class="main-articles" data-section= "me" id = "me"> 
           <h1 class="about-me">O mnie:</h1>
           <p class="description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
-            cumque alias sapiente ipsam doloribus consequatur illum explicabo,
-            suscipit veniam ab eveniet? Tempore adipisci, sint optio distinctio
-            nihil quia blanditiis veniam. Ullam rem excepturi ex suscipit.
-            Sapiente consequatur perferendis nisi ab sunt eos doloremque fuga
-            officiis!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,cumque alias sapiente ipsam doloribus consequatur illum explicabo,
+            suscipit veniam ab eveniet? Tempore adipisci, sint optio distinctionihil quia blanditiis veniam. Ullam rem excepturi ex suscipit.
+            Sapiente consequatur perferendis nisi ab sunt eos doloremque fugaofficiis!
           </p>
         </section>
         <section class="education" data-section= "edu" id = "edu"> 
@@ -133,6 +130,7 @@
         })
        })
     </script>
+    <script src="text.js"></script>
     <script src="footer.js"></script>
   </body>
 </html>
