--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
           <hr />
         </nav>
         <div class="person">
+          <h1 class="person_welcome"></h1>
           <img class="person_photo" src="assets/me.png" alt="" />
-          <h1 class="person_name"></h1>
+          <h1 class="person_name">Konrad Pietkiewicz</h1>
         </div>
         </header>
       <div class="main">
