--- a/index.html
+++ b/index.html
@@ -1,137 +1,127 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Konrad Pietkiewicz</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <nav class="menu">
-          <ul class="menu_list">
-            <li class="menu_item">
-              <a href="#" class="logo" class="menu_link">KonradPietkiewicz.PL</a>
-            </li>
-            <li class="menu_item"><a href="#" class="home" class="menu_link">Home</a></li>
-            <li class="menu_item"><a href="#"  class=" me" class="menu_link">O mnie</a></li>
-            <li class="menu_item"><a href="#" class="edu" class="menu_link">Edukacja</a></li>
-            <li class="menu_item">
-              <a href="#" class="skil" class="menu_link">Umiejętności</a>
-            </li>
-            <li class="menu_item"><a href="#" class="contact" class="menu_link">Kontakt</a></li>
-          </ul>
-          <hr />
-        </nav>
-        <div class="person">
-          <h1 class="person_welcome"></h1>
-          <img class="person_photo" src="assets/me.png" alt="" />
-          <h1 class="person_name">Konrad Pietkiewicz</h1>
-        </div>
-        </header>
-      <div class="main">
-        <section class="main-articles" data-section= "me" id = "me"> 
-          <h1 class="about-me">O mnie:</h1>
-          <p class="description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,cumque alias sapiente ipsam doloribus consequatur illum explicabo,
-            suscipit veniam ab eveniet? Tempore adipisci, sint optio distinctionihil quia blanditiis veniam. Ullam rem excepturi ex suscipit.
-            Sapiente consequatur perferendis nisi ab sunt eos doloremque fugaofficiis!
-          </p>
-        </section>
-        <section class="education" data-section= "edu" id = "edu"> 
-          <h1 class="education_intro">Edukacja</h1>
-          <article class="article">
-            <img src="assets/school.png" alt="" class="article_image" />
-            <div class="text">
-              <h3 class="article_name-school">Wyższa Szkoła Bankowa w Gdyni</h3>
-              <p class="article_year">Paz 2017 - obecnie</p>
-              <p class="article_info">Studia Inżynierskie Informatyka</p>
-            </div>
-          </article>
-          <article class="article">
-            <img src="assets/school.png" alt="" class="article_image" />
-            <div class="text">
-              <h3 class="article_name-school">
-                Zespół Szkół Gospodarki Żywnościowej i Agrobiznesu w Lęborku
-              </h3>
-              <p class="article_year">Wrz 2011 - Kwi 2015</p>
-              <p class="article_info">Profil Technik Informatyk</p>
-            </div>
-          </article>
-        </section>
-        <section class="skill" data-section= "skil" id = "skil">
-          <h1 class="skill_intro">Umiejętności</h1>
-          <div class="it">
-            <div class="technologies">
-              <img src="assets/html5.png" alt="" class="technologies_image" />
-              <p class="technologies_info">HTML5</p>
-            </div>
-            <div class="technologies">
-              <img src="assets/css-3.png" alt="" class="technologies_image" />
-              <p class="technologies_info">CSS3</p>
-            </div>
-            <div class="technologies">
-              <img src="assets/js.png" alt="" class="technologies_image" />
-              <p class="technologies_info">JavaScript</p>
-            </div>
-            <div class="technologies">
-              <img src="assets/react.png" alt="" class="technologies_image" />
-              <p class="technologies_info">React</p>
-            </div>
-            <div class="technologies">
-              <img src="assets/sass.png" alt="" class="technologies_image" />
-              <p class="technologies_info">Sass</p>
-            </div>
-            <div class="technologies">
-              <img
-                src="assets/adaptative.png"
-                alt=""
-                class="technologies_image"
-              />
-              <p class="technologies_info">RWD</p>
-            </div>
-            <div class="technologies">
-              <img src="assets/git.png" alt="" class="technologies_image" />
-              <p class="technologies_info">Git</p>
-            </div>
-          </div>
-        </section>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Konrad Pietkiewicz</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="wrapper">
+    <header>
+      <nav class="menu">
+        <ul class="menu_list">
+          <li class="menu_item">
+            <a href="#" class="logo" class="menu_link">KonradPietkiewicz.PL</a>
+          </li>
+          <li class="menu_item"><a href="#" class="home" class="menu_link">Home</a></li>
+          <li class="menu_item"><a href="#" class=" me" class="menu_link">O mnie</a></li>
+          <li class="menu_item"><a href="#" class="edu" class="menu_link">Edukacja</a></li>
+          <li class="menu_item">
+            <a href="#" class="skil" class="menu_link">Umiejętności</a>
+          </li>
+          <li class="menu_item"><a href="#" class="contact" class="menu_link">Kontakt</a></li>
+        </ul>
+        <hr />
+      </nav>
+      <div class="person">
+        <h1 class="person_welcome"></h1>
+        <img class="person_photo" src="assets/me.png" alt="" />
+        <h1 class="person_name">Konrad Pietkiewicz</h1>
       </div>
-      <div class="footer" data-section= "contact" id = "contact">
-        <div class="protection">
-          <div id="protection_copy"></div>
-          <p class="protection_name">Konrad Pietkiewicz</p>
+    </header>
+    <div class="main">
+      <section class="main-articles" data-section="me" id="me">
+        <h1 class="about-me">O mnie:</h1>
+        <p class="description">
+          Jestem studentem III roku informatyki (zaoczne) na Wyższej Szkole Bankowej w Gdyni. Od dziecka pasjonuję się
+          programowaniem, obecnie skupiam się na doskonaleniu swoich umiejętności związanych z front-endem.
+        </p>
+      </section>
+      <section class="education" data-section="edu" id="edu">
+        <h1 class="education_intro">Edukacja</h1>
+        <article class="article">
+          <img src="assets/school.png" alt="" class="article_image" />
+          <div class="text">
+            <h3 class="article_name-school">Wyższa Szkoła Bankowa w Gdyni</h3>
+            <p class="article_year">Paz 2017 - obecnie</p>
+            <p class="article_info">Studia Inżynierskie Informatyka</p>
+          </div>
+        </article>
+        <article class="article">
+          <img src="assets/school.png" alt="" class="article_image" />
+          <div class="text">
+            <h3 class="article_name-school">
+              Zespół Szkół Gospodarki Żywnościowej i Agrobiznesu w Lęborku
+            </h3>
+            <p class="article_year">Wrz 2011 - Kwi 2015</p>
+            <p class="article_info">Profil Technik Informatyk</p>
+          </div>
+        </article>
+      </section>
+      <section class="skill" data-section="skil" id="skil">
+        <h1 class="skill_intro">Umiejętności</h1>
+        <div class="it">
+          <div class="technologies">
+            <img src="assets/html5.png" alt="" class="technologies_image" />
+            <p class="technologies_info">HTML5</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/css-3.png" alt="" class="technologies_image" />
+            <p class="technologies_info">CSS3</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/js.png" alt="" class="technologies_image" />
+            <p class="technologies_info">JavaScript</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/react.png" alt="" class="technologies_image" />
+            <p class="technologies_info">React</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/sass.png" alt="" class="technologies_image" />
+            <p class="technologies_info">Sass</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/adaptative.png" alt="" class="technologies_image" />
+            <p class="technologies_info">RWD</p>
+          </div>
+          <div class="technologies">
+            <img src="assets/git.png" alt="" class="technologies_image" />
+            <p class="technologies_info">Git</p>
+          </div>
         </div>
-        <div class="link">
-        <a
-          class="link_icon"
-          href="https://www.facebook.com/konrad.pietkiewicz.7"
-          ><i class="fa fa-facebook-official" aria-hidden="true"></i
-        ></a>
-        <a class="link_icon" href="mailto: konradpietkiewicz20@gmail.com"
-          ><i class="fa fa-envelope" aria-hidden="true"></i
-        ></a>
-        <a class="link_icon" href="https://github.com/KonradPietkiewicz"
-          ><i class="fa fa-github-square" aria-hidden="true"></i
-        ></a>
+      </section>
+    </div>
+    <div class="footer" data-section="contact" id="contact">
+      <div class="protection">
+        <div id="protection_copy"></div>
+        <p class="protection_name">Konrad Pietkiewicz</p>
+      </div>
+      <div class="link">
+        <a class="link_icon" href="https://www.facebook.com/konrad.pietkiewicz.7"><i class="fa fa-facebook-official"
+            aria-hidden="true"></i></a>
+        <a class="link_icon" href="mailto: konradpietkiewicz20@gmail.com"><i class="fa fa-envelope"
+            aria-hidden="true"></i></a>
+        <a class="link_icon" href="https://github.com/KonradPietkiewicz"><i class="fa fa-github-square"
+            aria-hidden="true"></i></a>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script>
       $('nav a').on('click', function () {
-       const goToSection = "[data-section=" + $(this).attr('class') + "]";
+        const goToSection = "[data-section=" + $(this).attr('class') + "]";
         $('body, html').animate({
-         scrollTop: $(goToSection).offset().top
+          scrollTop: $(goToSection).offset().top
         })
-       })
+      })
     </script>
     <script src="text.js"></script>
     <script src="footer.js"></script>
-  </body>
+</body>
+
 </html>
